--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
   <body>
     <h1> Salut le monde ! <h1>
       <h2> Il pleut, il pleut bergère !<h2>
+        <h3> Je ne suis qu'un commit de plus <h3>
   <body>
